# vcpkg_issue_41170

./: CMakeLists.txt  CMakePresets.json  README.md  build.bat  build.sh  common.cmake  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: CMakePresets.json  ci.yml
